# ChangeLog for sys-fs/evms
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/evms/ChangeLog,v 1.23 2004/10/07 07:23:53 eradicator Exp $

  07 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org> evms-2.4.0.ebuild:
  Stable amd64, x86.

*evms-2.4.0 (20 Sep 2004)

  20 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> +evms-2.4.0.ebuild:
  Version bump, and get_libdir support.  This version fixes the
  problem in 2.3.x where you could not use evmsn to format your
  volumes.

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  evms-1.2.1-r1.ebuild, evms-2.2.2.ebuild, evms-2.3.2-r1.ebuild,
  evms-2.3.4-r1.ebuild:
  Masked evms-2.3.4-r1.ebuild stable for ppc

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  evms-1.2.1-r1.ebuild, evms-2.2.2.ebuild, evms-2.3.2-r1.ebuild:
  Masked evms-2.3.2-r1.ebuild stable for ppc

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  evms-1.2.1-r1.ebuild, evms-2.2.2.ebuild:
  Masked evms-2.2.2.ebuild stable for ppc

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  evms-1.2.1-r1.ebuild:
  Masked evms-1.2.1-r1.ebuild stable for ppc

  01 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> evms-2.3.4-r1.ebuild:
  Changing flag filtering per bug #54856.

  23 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> evms-2.2.2.ebuild,
  evms-2.3.2-r1.ebuild, evms-2.3.4-r1.ebuild:
  Added to stable x86 and amd64.  Do ldconfig in postinst() to fix bug #51252.

  27 Jun 2004; Aron Griffis <agriffis@gentoo.org> evms-1.2.1-r1.ebuild,
  evms-2.2.2.ebuild, evms-2.3.2-r1.ebuild, evms-2.3.4-r1.ebuild:
  QA - fix use invocation

*evms-2.3.4-r1 (23 Jun 2004)

  23 Jun 2004: Jeremy Huddleston <eradicator@gentoo.org> -evms-2.3.4.ebuild,
  +evms-2.3.4-r1.ebuild:
  Revbump to filter out -fstack-protector in 2.3.x.

  13 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org> evms-2.3.2.ebuild:
  Marking stable on x86.
