@@ -1,13 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 4487c5dc2edd72e87a091ae740de6b18 ChangeLog 6610
+MD5 5f7d33a72505b82020e3b9735ff2d6d2 ChangeLog 6731
 MD5 eaf8f6a7d79d64294bfa75183906f803 evms-1.2.1-r1.ebuild 1951
 MD5 15b44ca0a4828e1342e2074a3c6518d6 evms-2.2.2.ebuild 1784
-MD5 fd272d625ba14756145436ab81ccd44c evms-2.3.2-r1.ebuild 2143
-MD5 592511daa287d41db6acf3355035a699 evms-2.3.4-r1.ebuild 2215
-MD5 eab25fc0bfde7fd3c7fdf3c937fa52f6 metadata.xml 450
 MD5 7d83b4377b3a73413d1b9fd14db69907 evms-2.4.0.ebuild 2313
+MD5 fd272d625ba14756145436ab81ccd44c evms-2.3.2-r1.ebuild 2143
+MD5 eab25fc0bfde7fd3c7fdf3c937fa52f6 metadata.xml 450
+MD5 592511daa287d41db6acf3355035a699 evms-2.3.4-r1.ebuild 2215
+MD5 fad0c70c6ef02b160a0ef3d466613a38 evms-2.4.1.ebuild 2313
 MD5 cd670e457535a10c1c329aea559f7696 files/digest-evms-1.2.1-r1 63
 MD5 bbf4b9e76bc984677b897fe19c107185 files/digest-evms-2.2.2 63
 MD5 0a317817eea119e0888984775b8734e0 files/digest-evms-2.3.2-r1 63
@@ -15,10 +16,11 @@ MD5 634b1de02d7c1f3df88366c87f655a96 files/digest-evms-2.3.4-r1 63
 MD5 8f95e61903246ea287b1025913864ad9 files/evms-init 1000
 MD5 bef1ae81a93d9fe33c78e7883409a889 files/evms2-init 379
 MD5 d6a26be5028e70e5d6ff233f2f47ac21 files/digest-evms-2.4.0 63
+MD5 eca42f6495fe088ae4a486904f270b6a files/digest-evms-2.4.1 63
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.9.10 (GNU/Linux)
+Version: GnuPG v1.2.6 (GNU/Linux)
 
-iD8DBQFBcv/6I1lqEGTUzyQRArYuAKDQQfZrLxhxhb/jTGvu+mTIk7Hc9wCgjtty
-C4OZXAAF8zKrAi2wUJCiJjw=
-=5Cug
+iD8DBQFBkxKqArHZZzCEUG0RAqtDAJkBH227I+gDPZTowy7A++bBOr1EYwCfS/Lq
+BmFRp8+lHACeq1FSQqtgEhI=
+=si+u
 -----END PGP SIGNATURE-----
