@@ -1,0 +1,87 @@
+# Copyright 1999-2004 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/evms/evms-2.4.1.ebuild,v 1.1 2004/11/11 07:16:43 eradicator Exp $
+
+inherit eutils flag-o-matic
+
+DESCRIPTION="Utilities for the IBM Enterprise Volume Management System"
+HOMEPAGE="http://www.sourceforge.net/projects/evms"
+SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="x86 amd64 ~ppc"
+IUSE="ncurses gtk"
+
+#EVMS uses libuuid from e2fsprogs
+DEPEND="virtual/libc
+	sys-fs/e2fsprogs
+	sys-libs/device-mapper
+	gtk? ( =x11-libs/gtk+-1* )
+	ncurses? ( sys-libs/ncurses )"
+
+src_compile() {
+	# Bug #54856
+	# filter-flags "-fstack-protector"
+	replace-flags -O3 -O2
+	replace-flags -Os -O2
+
+	local excluded_interfaces=""
+	use ncurses || excluded_interfaces="--disable-text-mode"
+	use gtk || excluded_interfaces="${excluded_interfaces} --disable-gui"
+
+	econf \
+		--libdir=/$(get_libdir) \
+		--sbindir=/sbin \
+		--includedir=/usr/include \
+		${excluded_interfaces} || die "Failed configure"
+	emake || die "Failed emake"
+}
+
+src_install() {
+	make DESTDIR=${D} install || die "Make install died"
+	dodoc ChangeLog COPYING INSTALL* PLUGIN.IDS README TERMINOLOGY doc/linuxrc
+
+	# install the sample configuration into the doc dir
+	dodoc ${D}/etc/evms.conf.sample
+	rm -f ${D}/etc/evms.conf.sample
+
+	# the kernel patches may come handy for people compiling their own kernel
+	docinto kernel/2.4
+	dodoc kernel/2.4/*
+	docinto kernel/2.6
+	dodoc kernel/2.6/*
+
+	# move static libraries to /usr/lib
+	dodir /usr/$(get_libdir)
+	mv -f ${D}/$(get_libdir)/*.a ${D}/usr/$(get_libdir)
+
+	# Create linker scripts for dynamic libs in /lib, else gcc
+	# links to the static ones in /usr/lib first.  Bug #4411.
+	for x in ${D}/usr/$(get_libdir)/*.a
+	do
+		if [ -f ${x} ]
+		then
+			local lib="${x##*/}"
+			gen_usr_ldscript ${lib/\.a/\.so}
+		fi
+	done
+
+	# the gtk+ frontend should live in /usr/sbin
+	if use gtk
+	then
+		dodir /usr/sbin
+		mv -f ${D}/sbin/evmsgui ${D}/usr/sbin
+	fi
+
+	exeinto /etc/init.d
+	newexe ${FILESDIR}/evms2-init evms
+
+	# Needed for bug #51252
+	dosym libevms-2.4.so.0.0 /$(get_libdir)/libevms-2.4.so.0
+}
+
+pkg_postinst() {
+	ewarn "Presently gentoo-sources-2.4.22 has basic support for evms2,"
+	ewarn "but does NOT support some of the more advanced features."
+}
