@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/evms
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/evms/ChangeLog,v 1.23 2004/10/07 07:23:53 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/evms/ChangeLog,v 1.24 2004/11/11 07:16:43 eradicator Exp $
+
+*evms-2.4.1 (10 Nov 2004)
+
+  10 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org> +evms-2.4.1.ebuild:
+  Version bump.
 
   07 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org> evms-2.4.0.ebuild:
   Stable amd64, x86.
